Most of blog is working.

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,28 @@
-baseURL = "http://example.org/"
+baseURL = ""
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Codescapade"
+
+[params]
+  homeText = "You just made a Hugo blog flrom scratch."
+  dateFormat = "Jan 2, 2006"
+
+[menu]
+  [[menu.main]]
+    name = "Home"
+    url = "/"
+    weight = 1
+
+  [[menu.main]]
+    name = "Blog"
+    url = "/blog/"
+    weight = 2
+
+  [[menu.main]]
+    name = "Games"
+    url = "/games/"
+    weight = 3
+
+  [[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 4
