--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,15 @@
 baseURL = ""
 languageCode = "en-us"
 title = "Codescapade"
+relativeurls = true
+
+[blackfriday]
+  plainIDAnchors = true
+  hrefTargetBlank = true
 
 [params]
-  homeText = "You just made a Hugo blog flrom scratch."
   dateFormat = "Jan 2, 2006"
+  env = "dev"
 
 [menu]
   [[menu.main]]
@@ -23,6 +28,11 @@ title = "Codescapade"
     weight = 3
 
   [[menu.main]]
+    name = "Projects"
+    url = "/projects/"
+    weight = 4
+
+  [[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 4
+    weight = 5
