--- a/config.toml
+++ b/config.toml
@@ -16,28 +16,22 @@ relativeurls = true
     name = "Home"
     url = "/"
     weight = 1
-    pre = "home"
+    pre = "<i data-feather=\"home\" class=\"feather-icon\"></i>"
 
   [[menu.main]]
     name = "Blog"
     url = "/blog/"
     weight = 2
-    pre = "description"
+    pre = "<i data-feather=\"book-open\" class=\"feather-icon\"></i>"
 
   [[menu.main]]
     name = "Games"
     url = "/games/"
     weight = 3
-    pre = "videogame_asset"
-
-  [[menu.main]]
-    name = "Projects"
-    url = "/projects/"
-    weight = 4
-    pre = "folder"
+    pre = "<i class=\"material-icons-outlined mobile-nav\">videogame_asset</i>"
 
   [[menu.main]]
     name = "About"
     url = "/about/"
-    weight = 5
-    pre = "info"
+    weight = 4
+    pre = "<i class=\"material-icons-outlined mobile-nav\">info</i>"
