--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codescapade.github.io",
-  "description": "website",
+  "name": "TODO",
+  "description": "TODO",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "front-matter": "^3.0.2",
+    "glob": "^7.1.4",
+    "highlight.js": "^9.15.10",
+    "markdown-it": "^9.1.0",
+    "markdown-it-link-attributes": "^2.1.0",
     "polka": "next",
     "sirv": "^0.4.0"
   },
@@ -22,11 +27,6 @@
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "front-matter": "^3.0.2",
-    "glob": "^7.1.4",
-    "highlight.js": "^9.15.10",
-    "markdown-it": "^9.1.0",
-    "markdown-it-link-attributes": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.12.0",
     "rollup-plugin-babel": "^4.0.2",
@@ -36,6 +36,7 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-feather-icons": "^2.0.0"
   }
 }
